<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/textColor"
        android:layout_marginTop="170dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/title_main"
        />

    <EditText
        android:id="@+id/user_login"
        style="@style/AuthTextView"
        android:hint="@string/login_hint"
        android:inputType="text"
        android:textColor="@color/textColor"
        android:textColorHint="@color/colorHint" />
    <EditText
        android:id="@+id/user_password"
        style="@style/AuthTextView"
        android:hint="@string/password_hint"
        android:inputType="textVisiblePassword"
        android:textColor="@color/textColor"
        android:textColorHint="@color/colorHint"
        />
    <EditText
        android:id="@+id/user_mail"
        style="@style/AuthTextView"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textColor="@color/textColor"
        android:textColorHint="@color/colorHint"
        />

    <Button
        android:id="@+id/button_reg"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/shape"
        android:text="@string/button_reg"
        android:textColor="@color/textColor"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:text="@string/button_enter"
        android:textStyle="bold"
        android:textSize="@dimen/textSignInButton"
        android:textColor="@color/textColor"
        android:backgroundTint="@color/backgroundButton"
        />
</LinearLayout>