<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".MainActivity">

    <ImageView
        android:contentDescription="CART"
        android:id="@+id/image_cart"
        android:layout_width="33dp"
        android:layout_height="40dp"
        android:layout_gravity="end"
        android:src="@drawable/shopping_cart" />

    <TextView
        android:id="@+id/text_goods"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/title_cart"
        android:textColor="@color/textColor"
        android:textSize="@dimen/title"
        android:textStyle="bold"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/goodsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="30dp"
    />

    <Button
        android:id="@+id/button_cart"
        style="@style/ButtonView.Primary"
        android:text="@string/button_buy"
        android:background="@drawable/shape"
        />

    <Button
        android:id="@+id/button_to_profile"
        style="@style/ButtonView.Primary"
        android:text="@string/button_profile"
        />

</LinearLayout>